--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -24,3 +24,21 @@ html,body,#app{
   .el-pagination {
     margin-top: 15px;
   }
+
+  .el-steps{
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+
+  .el-step__title{
+    font-size: 12px;
+  }
+
+  /* 在global.css样式中添加富文本编辑器的最小高度 */
+.ql-editor{
+    min-height: 300px;
+}
+/* 给添加商品按钮添加间距 */
+.btnAdd{
+  margin-top:15px;
+}
